force-app/main/default/objects/MatcherPattern__mdt/MatcherPattern__mdt.object-meta.xml
<CustomObject>
    <label>MatcherPattern</label>
    <pluralLabel>MatcherPatterns</pluralLabel>
</CustomObject>