force-app/main/default/objects/MatcherPattern__mdt/fields/isMaster__c.field-meta.xml
<CustomField>
    <fullName>isMaster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMaster</label>
    <type>Checkbox</type>
</CustomField>