force-app/main/default/objects/MatcherPattern__mdt/fields/PatternTestSet__c.field-meta.xml
<CustomField>
    <fullName>PatternTestSet__c</fullName>
    <description>A set containing all prefixes that should match the prefix pattern separated by the &#39;|&#39;-character, to be used in testclass only.</description>
    <inlineHelpText>A set containing all prefixes that should match the prefix pattern separated by the &#39;|&#39;-character</inlineHelpText>
    <label>PatternTestSet</label>
    <type>TextArea</type>
</CustomField>