force-app/main/default/objects/MatcherPattern__mdt/fields/RegexPattern__c.field-meta.xml
<CustomField>
    <fullName>RegexPattern__c</fullName>
    <label>RegexPattern</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>